fixed styling on HomeScreen to remove unecessary top margin and added spacing at the bottom of LoadInvoicesScreen

--- a/TruckManager/src/Styles/GlobalStyles.css
+++ b/TruckManager/src/Styles/GlobalStyles.css
@@ -5,7 +5,6 @@
     align-items: center;
 }
 .container {
-  padding-top: 100px;
   display:flex;
   flex-direction: column;
   align-items: center;
