--- a/TruckManager/src/Styles/HomeScreen.css
+++ b/TruckManager/src/Styles/HomeScreen.css
@@ -3,7 +3,7 @@
     left: 30%;
     margin: 20px;
     margin-bottom: 0px;
-    margin-top: 0px;
+    margin-top: 20px;
 }
 .user-profile-link {
     cursor: pointer;
